[tool.poetry]
name = "rancher_api"
version = "0.1.0"
description = "Rancher API for creating clusters and registering nodes"
authors = ["Mrabti Adil"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
requests = "^2.32.3"
fastapi = "^0.112.1"
paramiko = "^3.4.1"

scp = "^0.15.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
rancher_api = "rancher_api.run:main"
